fix: border color and text wrap

--- a/style.css
+++ b/style.css
@@ -71,9 +71,7 @@ html{
 
 /*singolo1.slider*/
 
-.singolo1{
-    border-bottom: 6px solid red;
-}
+
 .promo{
     display: flex;
     padding: 0 40px;
@@ -104,6 +102,7 @@ html{
     background-color: #f2f2f2;
     padding:59px 40px 0px 40px ;
     height:435px;
+    border-bottom: 6px solid #ffffff;;
 }
 
 .ourServices-h2{
@@ -122,6 +121,8 @@ html{
     margin-bottom: 42px;
     color: #767e9e;
     font-weight: 300;
+    height: 60px;
+    overflow: hidden;
 }
 .tool_icon{
     padding-top:4px;
@@ -175,6 +176,7 @@ html{
     font-size: 30px;
     letter-spacing: 0.7px;
     margin-bottom: 22px;
+    
 }
 .portfolio-h2-text{
     color: #767e9e;
@@ -183,6 +185,9 @@ html{
     text-align: justify;
     letter-spacing: -0.22px;
     margin-bottom: 15px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .button{
     border-radius: 5px;
@@ -194,6 +199,11 @@ html{
     border: 1px solid #666d89;
     background-color: #2d303a;
     margin-bottom: 19px;
+    cursor: pointer;
+}
+.button:hover{
+    color:#c5c5c5;
+    border: 1px solid #c5c5c5;
 }
 .whiteButton{
     color:#c5c5c5;
@@ -204,6 +214,8 @@ html{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    height: 601px;
+    overflow: hidden;
 }
 .gallery-img{
     width: 220px;
@@ -220,6 +232,7 @@ html{
     padding-top: 59px;
     background-color: #f2f2f2;
     border-bottom: 6px solid #ffffff;
+    overflow: hidden;
 }
 .aboutUs-h2{
     font-size: 30px;
@@ -254,6 +267,10 @@ html{
     font-weight: 900;
     margin-bottom: 9px;
     letter-spacing: 0.2px;
+    height: 22px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .person-text{
     font-size: 12px;
@@ -267,6 +284,10 @@ html{
 }
 .social-link{
     margin-right: 2px;
+    cursor: pointer;
+}
+.social-link:hover{
+    outline: 1px solid #767e9e;
 }
 
 
